refactor: use chunks when querying by process instance ids